<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/measure_basic"
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/measure_basic_edit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment3"
        android:id="@+id/date_title"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/measure_basic_edit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/date_area"
        app:layout_constraintTop_toBottomOf="@id/date_title"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/measure_date"
            android:layout_marginLeft="10dp"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment1"
        android:id="@+id/radio_title"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/date_area"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radio_parent"
        app:layout_constraintTop_toBottomOf="@id/radio_title"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/int_value"
            android:focusedByDefault="true"
            android:id="@+id/int_value"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/int_image"
            android:id="@+id/image_value"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/int_area"
        app:layout_constraintTop_toBottomOf="@id/radio_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/radio_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="value"
                />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/int_value_edit"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            app:layout_constraintTop_toBottomOf="@id/radio_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="単位"
                />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType=""
                android:id="@+id/int_value_unit_name"
                />

        </LinearLayout>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment2"
        android:id="@+id/image_area_title"
        app:layout_constraintTop_toBottomOf="@id/int_area"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_area"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/image_area_title"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/takepic"
                android:text="take pic"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/findfile"
                android:text="find file"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/image_src"
            />


    </LinearLayout>









</android.support.constraint.ConstraintLayout>