<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/measure_basic"
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="titletitle"
        android:textSize="16sp"
        android:id="@+id/measure_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment3"
        android:id="@+id/date_title"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/measure_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/date_area"
        app:layout_constraintTop_toBottomOf="@id/date_title"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/measure_date"
            android:text="xxxxxxx"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment6"
        android:id="@+id/value_title"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/date_area"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_name"
        android:text="int"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toRightOf="@id/value_title"
        app:layout_constraintBottom_toBottomOf="@id/value_title"
        app:layout_constraintTop_toTopOf="@id/value_title"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/int_area"
        app:layout_constraintTop_toBottomOf="@id/value_title"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value"
            />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/int_value_edit"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_area"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/int_area"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/takepic"
                android:text="take pic"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/findfile"
                android:text="find file"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/image_src"
            />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>